--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12717,6 +12717,7 @@ users:
     - is.secretary
     - is.officer
     group:
+    - secretary
     - officer
     - supergirl
     options:
@@ -13090,7 +13091,7 @@ users:
     permissions: []
   61ab6a9b-57a8-48d6-b753-dc4d7366d991:
     group:
-    - batmanbeyond
+    - greenlanternhaljordan
     options:
       name: GreenLantern
     permissions: []
@@ -13982,7 +13983,7 @@ users:
     options:
       name: Bulldogbuilders
     group:
-    - reverseflasheobardthawne
+    - mortal
   991be13d-0a15-40ec-aeb3-f7c4fdb964e3:
     group:
     - bluelanternbarryallen
@@ -15399,7 +15400,7 @@ users:
     - flashwallywest
   caa754e0-43c5-42bd-9bfa-350e6d7794d5:
     group:
-    - vision
+    - blackcanary
     options:
       name: DuckE_PVP
   1a526dd6-fe07-4a32-8598-72c290556472:
@@ -15420,4 +15421,6 @@ users:
       name: Leedler268
   16d364f7-7c12-4d6c-a093-7415732a592f:
     group:
-    - spidermanpeterparker
+    - beastboy
+    options:
+      name: RobotEvan
