--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -48,8 +48,8 @@ v2-logout:
     group: default
     world: greenfield
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: spawn
-    group: spawn
+    world: spleef
+    group: spleef
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -489,8 +489,8 @@ v2-logout:
     group: default
     world: greenfield
   4220f479-2a13-48c6-82a4-58f37008b5d2:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   bf559559-e3c6-4445-bc99-2f2d8a137688:
     group: default
     world: greenfield
@@ -3462,7 +3462,7 @@ v2-logout:
     world: greenfield
   61ab6a9b-57a8-48d6-b753-dc4d7366d991:
     group: default
-    world: survival112
+    world: greenfield
   96d09e44-faae-4cb5-9e29-6a6c7cca8d09:
     group: default
     world: greenfield
@@ -4193,7 +4193,7 @@ v2-logout:
     world: spleeflobby
   ec365045-50d3-4ca2-a1dc-f0811ca5de71:
     group: default
-    world: survival112
+    world: greenfield
   eb4c14a5-41f6-4246-ae72-2f2c372dbd9b:
     group: default
     world: greenfield
@@ -5745,8 +5745,8 @@ v2-logout:
     group: default
     world: greenfield
   e93e5206-dc4d-421d-b8e2-f7a06df90fd2:
-    group: default
-    world: greenfield
+    group: spleef
+    world: spleef
   2aaf3e05-a1b4-4316-818e-f97a87120804:
     group: anarchy
     world: anarchy
@@ -5967,5 +5967,8 @@ v2-logout:
     group: default
     world: greenfield
   e841d769-0d0e-4670-9f39-4b1d87f7a75d:
+    group: default
+    world: greenfield
+  16d364f7-7c12-4d6c-a093-7415732a592f:
     group: default
     world: greenfield
