--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,19 @@
 groups:
+  lizard:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2L&fiz&0a&fr&5d'
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
   normadesmond:
     inheritance:
     - commonherotraits
@@ -12745,8 +12760,7 @@ users:
     - blackracerwilliewalker
     options:
       name: bamfb
-    permissions:
-    - chat.cooldown
+    permissions: []
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     permissions:
     - is.officer
@@ -12973,7 +12987,8 @@ users:
     - 87fb3c6c5ff64bf6b326992c6137ea12
     options:
       name: Jiren_The_Grey
-    permissions: []
+    permissions:
+    - powers.onepunch
     worlds:
       fightclub:
         permissions: []
@@ -15178,7 +15193,7 @@ users:
       name: Anki88
   2766d660-1832-4968-ac5d-f8cb201cc705:
     group:
-    - bluelanternbarryallen
+    - vibe
     options:
       name: RealiZe296
   4b27712b-33c0-4a91-9fba-4addd57a028f:
@@ -15463,7 +15478,7 @@ users:
       name: Cpt_Diamond05
   b72b5047-7d59-4c19-b2dd-d99fc6f44b24:
     group:
-    - flashbarryallen
+    - flashwalterwest
     options:
       name: Frostbite071
     permissions: []
@@ -15677,3 +15692,6 @@ users:
     - mortal
     options:
       name: SydneyMurphy6
+  ba9bae4e-12c2-45fd-adc6-27bd585a7539:
+    group:
+    - raven
