--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -15,8 +15,8 @@ v2-logout:
     world: survival112
     group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: survival112
