--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12944,7 +12944,7 @@ users:
     options:
       name: Grim765Man
     group:
-    - mortal
+    - criminal
     permissions: []
   4b14621f-55d8-492a-a74f-b5b107f058d0:
     group:
@@ -13382,7 +13382,7 @@ users:
       name: CanadianMike7
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
     group:
-    - greninja
+    - antman
     options:
       name: Predamorph1519
     permissions: []
@@ -13510,7 +13510,7 @@ users:
       prefix: '&f&lKCocco Owner&a&l/'
       name: RqndomPqrson
     group:
-    - mortal
+    - criminal
     permissions: []
   a5c92806-da45-47ab-90f9-c96a8f197c45:
     group:
@@ -14135,6 +14135,7 @@ users:
       name: Zerho
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group:
+    - officer
     - flashwallywest
     options:
       name: _Vigilance_
@@ -15344,7 +15345,7 @@ users:
     options:
       name: PurpleBenja
     group:
-    - bluelanternbarryallen
+    - infinitysilversurfer
   7124683c-d38a-4fad-bf91-15e35359518b:
     group:
     - flashbarryallen
@@ -15694,4 +15695,12 @@ users:
       name: SydneyMurphy6
   ba9bae4e-12c2-45fd-adc6-27bd585a7539:
     group:
-    - raven
+    - jeangrey
+  023cee91-2748-4dce-bd07-f6dd0a828336:
+    group:
+    - trigon
+    options:
+      name: BladeofReign
+  c3a4e4d3-b04a-48e7-ad9f-60cc59699af3:
+    group:
+    - goku
