--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -5158,7 +5158,7 @@ v2-logout:
     world: greenfield
   62b5cb83-a0dc-472a-9bf5-d855124718a8:
     group: default
-    world: survival112_the_end
+    world: survival112
   14cc31b2-9f2c-43df-b7b7-0cbb389628ce:
     group: default
     world: greenfield
@@ -6066,5 +6066,8 @@ v2-logout:
     group: default
     world: greenfield
   5209a636-2c51-4409-96e2-9be5185e9f00:
+    group: default
+    world: greenfield
+  023cee91-2748-4dce-bd07-f6dd0a828336:
     group: default
     world: greenfield
