--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ PerPlayerBlood/players/
 Magic/data/players/
 xInventories/groups/
 CommandHelper/includes/challongeKey.ms
+CommandHelper/prefs/logs/
