--- a/CommandHelper/prefs/profiler.ini
+++ b/CommandHelper/prefs/profiler.ini
@@ -17,7 +17,7 @@ profiler-log=logs/profiling/internal/%Y-%M-%D-profiler.log
 
 # Turns the profiler on or off. The profiler can cause a slight amount of lag, so generally speaking you don't leave it 
 # on during normal operation.
-profiler-on=true
+profiler-on=false
 
 # If true, will write results out to file.
 write-to-file=true
