--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -15695,7 +15695,9 @@ users:
       name: SydneyMurphy6
   ba9bae4e-12c2-45fd-adc6-27bd585a7539:
     group:
-    - jeangrey
+    - infinitysilversurfer
+    options:
+      name: Deathcore01
   023cee91-2748-4dce-bd07-f6dd0a828336:
     group:
     - trigon
@@ -15704,3 +15706,5 @@ users:
   c3a4e4d3-b04a-48e7-ad9f-60cc59699af3:
     group:
     - goku
+    options:
+      name: BaconboyX10
