--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -15695,7 +15695,7 @@ users:
       name: SydneyMurphy6
   ba9bae4e-12c2-45fd-adc6-27bd585a7539:
     group:
-    - infinitysilversurfer
+    - jinx
     options:
       name: Deathcore01
   023cee91-2748-4dce-bd07-f6dd0a828336:
