--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ xInventories/groups/
 CommandHelper/includes/challongeKey.ms
 CommandHelper/prefs/logs/
 ChatControl/logs/
+GriefPrevention/ClaimData/
