--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.off
 *.swp
 CoreProtect/config.yml
+CoreProtect/database.db
 PerWorldInventory/data/
 BCC/players/
 GriefPreventionData/PlayerData/
