--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -9995,6 +9995,55 @@ groups:
         - ch.alias.haste6
         - ch.alias.haste7
         - ch.alias.haste8
+  darksupergirl:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: 'supergirl:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0D&7a&8r&0k S&8u&4p&7e&8rg&0irl'
+      suffix: '&7'
+    worlds:
+      survival112:
+        permissions:
+        - weakto.kryptonite
+        - powers.wallrun
+        - -essentials.protect.damage.fall
+        - ch.alias.darksupergirl
+        - essentials.fly
+        - essentials.speed.fly
+        - essentials.speed
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.jump6
+        - ch.alias.jump7
+        - ch.alias.jump8
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.run7
+        - ch.alias.run8
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+        - ch.alias.haste5
+        - ch.alias.haste6
+        - ch.alias.haste7
+        - ch.alias.haste8
   superman:
     inheritance:
     - commonherotraits
