--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8990,7 +8990,7 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
-        - essentials.lightning
+        - powers.pointandclicklightning
         - ch.alias.ma
   rmika:
     inheritance:
