--- a/BCC/config.yml
+++ b/BCC/config.yml
@@ -8,36 +8,36 @@ Prefixes:
   '@W': '&4[WARNING]&f '
   '@T': '&5[TIP]&f '
 Messages:
+    #  - "&b ----------------------------------------------------\n
+    #&4&l&kK&a&l Vote on the new labs! (&c&lpls re-vote&a&l, &4&l&ofinal &b&l&onew poll&a&l)\n
+    #&4&l&kK&d&l /warp lab1 lab2 lab3 lab4 lab5 lab6 lab7 lab8 lab9\n
+    #&4&l&kK&e&l The Best Lab Will Become The Official Lab!\n
+    #&4&l&kK&6&l http://www.strawpoll.me/13537825\n
+    #&b----------------------------------------------------"
   - "&b ----------------------------------------------------\n
-&4&l&kK&a&l Vote on the new labs! (&c&lpls re-vote&a&l, &4&l&ofinal &b&l&onew poll&a&l)\n
-&4&l&kK&d&l /warp lab1 lab2 lab3 lab4 lab5 lab6 lab7 lab8 lab9\n
-&4&l&kK&e&l The Best Lab Will Become The Official Lab!\n
-&4&l&kK&6&l http://www.strawpoll.me/13537825\n
+&7This server supports &aall canon &7(&4&lnot &4fanfic&7) &7characters&7\n
+It is &lFEATS ONLY&7, meaning NO WIKIS OR FANSITES.\n
+Only stuff that's &lACTUALLY&7 been shown in a comic, game,\n
+TV, Movie, or other authorized merch.\n
+Interpretation can still be up for debate.\n
+&lONLY PICS OR VIDS COUNT AS PROOF!\n
 &b----------------------------------------------------"
-#  - "&b ----------------------------------------------------\n
-#&7This server supports &aall canon &7(&4&lnot &4fanfic&7) &7characters&7\n
-#It is &lFEATS ONLY&7, meaning NO WIKIS OR FANSITES.\n
-#Only stuff that's &lACTUALLY&7 been shown in a comic, game,\n
-#TV, Movie, or other authorized merch.\n
-#Interpretation can still be up for debate.\n
-#&lONLY PICS OR VIDS COUNT AS PROOF!\n
-#&b----------------------------------------------------"
-#  - "&b ----------------------------------------------------\n
-#&7Handy Stuff:\n
-#&a/recipe&7\n
-#&a/co i&7\n
-#&a/home &f<&aplayername&f>&a: &f<-- dont forget the &a:&7\n
-#&a/powers&7\n
-#&a/mortal&7\n
-#&a/disguiseviewself &f(&a/dvs&f)&7\n
-#&a/who&7\n
-#&a/listheroes &f<&apagenum&f>&7\n
-#&a/id &f<&aclassname&f>&7\n
-#&d&lhttps://discord.gg/bZKRRCt\n
-#&b----------------------------------------------------"
-#  - "&b ----------------------------------------------------\n
-#    &7We now beg for irl money: &ahttps://goo.gl/BmxAqv&7\n
-#&b----------------------------------------------------"
+  - "&b ----------------------------------------------------\n
+&7Handy Stuff:\n
+&a/recipe&7\n
+&a/co i&7\n
+&a/home &f<&aplayername&f>&a: &f<-- dont forget the &a:&7\n
+&a/powers&7\n
+&a/mortal&7\n
+&a/disguiseviewself &f(&a/dvs&f)&7\n
+&a/who&7\n
+&a/listheroes &f<&apagenum&f>&7\n
+&a/id &f<&aclassname&f>&7\n
+&d&lhttps://discord.gg/bZKRRCt\n
+&b----------------------------------------------------"
+  - "&b ----------------------------------------------------\n
+    &7We now beg for irl money: &ahttps://goo.gl/BmxAqv&7\n
+&b----------------------------------------------------"
 #  - "&b ----------------------------------------------------\n
 #a&nServer Hierarchy&r\n
 #\n
