--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -12,11 +12,11 @@ v2-logout:
     world: spawn
     group: spawn
   deb20342-389e-4b5f-808f-24bd22d88aa4:
-    world: survival112
+    world: greenfield
     group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: survival112
@@ -33,8 +33,8 @@ v2-logout:
     group: default
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: policeoffice
-    world: policeoffice
+    group: crossfire
+    world: crossfire
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: policeoffice
     group: policeoffice
@@ -48,14 +48,14 @@ v2-logout:
     group: plots
     world: plots
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    world: greenfield
-    group: default
+    world: spawn
+    group: spawn
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: fightclub
     world: fightclub
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: overvoid
-    group: overvoid
+    world: boatrace
+    group: boatrace
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     world: policeoffice
     group: policeoffice
@@ -96,8 +96,8 @@ v2-logout:
     world: spleeflobby
     group: spleeflobby
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: overvoid
-    group: overvoid
+    world: policeoffice
+    group: policeoffice
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: greenfield
     group: default
@@ -136,7 +136,7 @@ v2-logout:
     world: speedforce
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group: default
-    world: greenfield
+    world: survival112
   e0fc9cdc-59e8-4f9d-bc86-20648906953e:
     group: default
     world: greenfield
@@ -171,8 +171,8 @@ v2-logout:
     group: default
     world: survival112
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
-    group: default
+    world: office
+    group: office
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
     world: plots
@@ -180,8 +180,8 @@ v2-logout:
     group: default
     world: greenfield
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    world: office
-    group: office
+    world: spawn
+    group: spawn
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: survival112
@@ -201,8 +201,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: overvoid
-    group: overvoid
+    world: greenfield
+    group: default
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -471,8 +471,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
-    world: greenfield
-    group: default
+    world: overvoid
+    group: overvoid
   9e706bf6-6fc2-4a2a-bdda-4ef531d05908:
     group: default
     world: greenfield
@@ -483,14 +483,14 @@ v2-logout:
     group: default
     world: greenfield
   1c575be8-a874-4b78-8307-3252351ad276:
-    group: default
-    world: greenfield
+    group: office
+    world: office
   0e42e474-1348-4fa8-97c6-cb39a9c0988f:
     group: default
     world: greenfield
   4220f479-2a13-48c6-82a4-58f37008b5d2:
-    group: spleeflobby
-    world: spleeflobby
+    group: default
+    world: greenfield
   bf559559-e3c6-4445-bc99-2f2d8a137688:
     group: default
     world: greenfield
@@ -880,8 +880,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    world: greenfield
-    group: default
+    world: overvoid
+    group: overvoid
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
@@ -3161,11 +3161,11 @@ v2-logout:
     group: speedforce
     world: speedforce
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
-    world: overvoid
-    group: overvoid
-  663fa87e-be4c-45d5-bdde-587fa94e8f97:
-    world: greenfield
+    world: survival112
     group: default
+  663fa87e-be4c-45d5-bdde-587fa94e8f97:
+    world: plots
+    group: plots
   4f0c24c9-ab50-403e-bde5-8fa1db06c1be:
     group: default
     world: greenfield
@@ -3204,8 +3204,8 @@ v2-logout:
     group: speedforce
     world: speedforce
   f559cef3-ef94-4e1e-8bcf-1d16dcad2aa6:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: survival112
   647c8c25-fa7a-4539-b6f9-fe684bd6b840:
     group: default
     world: greenfield
@@ -3788,8 +3788,8 @@ v2-logout:
     group: spawn
     world: spawn
   efe916ff-cae5-40b1-8878-3e55d776c2dc:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   aad62e80-3d67-42ae-95c5-c7faccd31967:
     group: default
     world: greenfield
@@ -3825,7 +3825,7 @@ v2-logout:
     world: spawn
   70980c2a-331c-43c0-b900-87bcc29ecc8c:
     group: default
-    world: greenfield
+    world: survival112
   b5ef43f6-6af0-47da-b4c9-c13352976935:
     group: default
     world: greenfield
@@ -4144,8 +4144,8 @@ v2-logout:
     group: default
     world: greenfield
   35e00da1-9dd2-464d-b34e-abea365bde5c:
-    group: newminigamehub
-    world: newminigamehub
+    group: default
+    world: survival112
   9d7bfa42-1230-42fb-a35d-c3f497e71f05:
     group: default
     world: survival112
@@ -4192,8 +4192,8 @@ v2-logout:
     group: spleeflobby
     world: spleeflobby
   ec365045-50d3-4ca2-a1dc-f0811ca5de71:
-    group: overvoid
-    world: overvoid
+    group: policeoffice
+    world: policeoffice
   eb4c14a5-41f6-4246-ae72-2f2c372dbd9b:
     group: default
     world: greenfield
@@ -4435,8 +4435,8 @@ v2-logout:
     group: default
     world: survival112
   c23c6679-b9ff-4249-a1f1-51c4c04ad098:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   de1d4a5c-4d26-4066-b012-d662328fbbf1:
     group: default
     world: greenfield
@@ -4603,8 +4603,8 @@ v2-logout:
     group: default
     world: greenfield
   8b2ebc18-3f2f-4763-a72e-487b00afd302:
-    group: default
-    world: greenfield
+    group: plots
+    world: plots
   c6a6baf5-2eb5-4292-abe9-1054355bb10c:
     group: default
     world: greenfield
@@ -5151,8 +5151,8 @@ v2-logout:
     group: default
     world: greenfield
   f8a67daa-a690-4ec3-88fa-5dab1fea6d1f:
-    group: default
-    world: greenfield
+    group: overvoid
+    world: overvoid
   ce660bd5-6c37-4b04-873f-f3e8368cb6fb:
     group: default
     world: greenfield
@@ -5727,8 +5727,8 @@ v2-logout:
     group: spawn
     world: spawn
   3d88ce4c-0b96-45b7-b29d-0b94409c6bef:
-    group: policeoffice
-    world: policeoffice
+    group: overvoid
+    world: overvoid
   675770e6-99eb-4db5-a637-ed475ce1fafb:
     group: default
     world: greenfield
@@ -6073,7 +6073,7 @@ v2-logout:
     world: greenfield
   5d869399-1152-4ffc-a564-31c4258ab2c8:
     group: default
-    world: survival112
+    world: greenfield
   c0a32b0e-f135-4fa0-86d1-9174ce943a50:
     group: default
     world: greenfield
@@ -6102,8 +6102,8 @@ v2-logout:
     group: spawn
     world: spawn
   d1ad3f3c-2a47-4921-81bb-68a9f2862c34:
-    group: default
-    world: greenfield
+    group: spleef
+    world: spleef
   1ab7e46d-75b6-4141-b847-40c67b6c8b61:
     group: newminigamehub
     world: newminigamehub
@@ -6111,5 +6111,32 @@ v2-logout:
     group: default
     world: greenfield
   19960e86-4258-45a1-9184-f9fd2130b3f3:
+    group: default
+    world: greenfield
+  533ff605-89a5-4c0c-b807-4d0fdcbbd233:
+    group: default
+    world: greenfield
+  860b0690-d121-470e-a3e6-9203c9d50f5e:
+    group: default
+    world: greenfield
+  2fc2ce85-cec4-4e08-af7e-be7ec33d9aff:
+    group: default
+    world: survival112
+  189096cb-6b10-47ec-891e-e63c8d69e493:
+    group: speedforce
+    world: speedforce
+  19ee3f8a-822c-448b-bec1-d3e7977803f4:
+    group: spleef
+    world: spleef
+  acbcdb40-25ef-426c-95f0-bf2357c93be0:
+    group: newminigamehub
+    world: newminigamehub
+  b813d1f6-b432-4c9d-87a0-0e1abb45e8ac:
+    group: default
+    world: greenfield
+  90627d2b-b036-49b7-804d-af779fc6a615:
+    group: default
+    world: greenfield
+  dcfe2c9c-01b2-427f-b85c-96ec00380cc2:
     group: default
     world: greenfield
