--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,35 @@
 groups:
+  taskmaster:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&7T&1a&8sk&7M&1a&8s&7t&1e&7r'
+      suffix: '&1'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - ch.alias.wolverine
+        - ch.alias.captainamerica
+        - ch.alias.deadpool
+        - ch.alias.websling
+        
   lizard:
     inheritance:
     - commonherotraits
