--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -4318,6 +4318,7 @@ groups:
         - ch.alias.haste7
         - ch.alias.haste8
         - ch.alias.haste9
+        - power.eat
   gamora:
     inheritance:
     - commonherotraits
