--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,19 @@
 groups:
+
+  scarletwitch:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&4S&ccar&4let &4W&citc&4h'
+      suffix: '&c'
+    worlds:
+      survival112:
+        permissions:
+        - Magic.cast.telekinisis
+        - Magic.cast.manipulate
+        - Magic.cast.forcefield
+        - ch.alias.confuse
+        - essentials.fly
   rhino:
     inheritance:
     - commonherotraits
