--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -2430,7 +2430,19 @@ groups:
         - ch.alias.daredevil
         - ch.alias.jump0
         - ch.alias.jump1
-  darkseid:
+        Riddler:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '§2R§2i§5d§5dler'
+      suffix: '&2'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.Riddler
+        - ch.alias.jump0
+        - ch.alias.jump1
+ darkseid:
     inheritance:
     - commonherotraits
     options:
