--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -14424,7 +14424,7 @@ users:
       name: Roproman
   605de075-3675-4cd8-b91c-3a0a9e9bf0f4:
     group:
-    - wonderman
+    - whitelanternkylerayner
     options:
       name: Firephoenix0254
     worlds:
@@ -16407,7 +16407,7 @@ users:
       name: wertux
   56cccfb9-064a-4155-b46b-a753284ebcd4:
     group:
-    - greenarrow
+    - flashbarryallen
     options:
       name: jakob2980
   a7f4f36a-6e39-457c-9629-d42d092537e0:
@@ -16485,7 +16485,7 @@ users:
     permissions: []
   70f53b91-008e-48d3-a827-82b155809b2c:
     group:
-    - flashbarryallen
+    - mortal
     options:
       name: MoreFridges
     permissions: []
