--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -6058,8 +6058,8 @@ v2-logout:
     group: spawn
     world: spawn
   d1ad3f3c-2a47-4921-81bb-68a9f2862c34:
-    group: overvoid
-    world: overvoid
+    group: default
+    world: greenfield
   1ab7e46d-75b6-4141-b847-40c67b6c8b61:
     world: escaperoom
     group: escaperoom
@@ -6299,8 +6299,8 @@ v2-logout:
     group: default
     world: greenfield
   70f53b91-008e-48d3-a827-82b155809b2c:
-    group: fightclub
-    world: fightclub
+    group: default
+    world: greenfield
   1090010f-1f97-4253-8138-a6eba3dbbb49:
     group: office
     world: office
